--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     scroll-behavior: smooth;
   }
   main {
-    @apply container max-w-6xl mx-auto px-6;
+    @apply container max-w-6xl mx-auto px-6 h-full min-h-screen flex items-center py-20;
   }
   img {
     @apply w-full h-full object-cover;
